--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <version.com.fasterxml.jackson>2.5.4</version.com.fasterxml.jackson>
         <version.com.google.inject>4.1.0</version.com.google.inject>
         <version.com.h2database>1.3.173</version.com.h2database>
+        <version.org.postgresql>9.4.1212</version.org.postgresql>
         <version.com.mashape.unirest>1.4.9</version.com.mashape.unirest>
         <version.commons-beanutils>1.9.2</version.commons-beanutils>
         <version.commons-cli>1.3.1</version.commons-cli>
@@ -179,11 +180,6 @@
                 <version>${version.commons-lang}</version>
             </dependency>
             <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>${version.com.h2database}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.mashape.unirest</groupId>
                 <artifactId>unirest-java</artifactId>
                 <version>${version.com.mashape.unirest}</version>
@@ -225,7 +221,12 @@
                 <artifactId>h2</artifactId>
                 <version>${version.com.h2database}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${version.org.postgresql}</version>
+            </dependency>
+            
 			<!-- Spec Libraries -->
             <dependency>
                 <groupId>org.jboss.spec.javax.ws.rs</groupId>
@@ -278,6 +279,10 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
         
         <!-- Test Deps -->
