--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -5,6 +5,6 @@ swarm:
     data-sources:
       OcpDS:
         driver-name: h2
-        connection-url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
+        connection-url: jdbc:h2:mem:test
         user-name: sa
         password: sa
